--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 pandas = "^1.5.3"
 tqdm = "^4.64.1"
 sh = "^2.0.4"
+typer = {extras = ["all"], version = "^0.9.0"}
 
 
 [build-system]
