--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ pandas = "^1.5.3"
 tqdm = "^4.64.1"
 sh = "^2.0.4"
 typer = {extras = ["all"], version = "^0.9.0"}
+json5 = "^0.9.14"
+pydantic = "^2.1.1"
 
 
 [build-system]
