--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ sh = "^2.0.4"
 typer = {extras = ["all"], version = "^0.9.0"}
 json5 = "^0.9.14"
 pydantic = "^2.1.1"
+matplotlib = "^3.7.2"
 
 
 [build-system]
