--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ typer = {extras = ["all"], version = "^0.9.0"}
 json5 = "^0.9.14"
 pydantic = "^2.1.1"
 matplotlib = "^3.7.2"
+seaborn = "^0.12.2"
 
 
 [build-system]
