--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,6 +4,10 @@ default:
 before_script:
   - pip install poetry
   - poetry install
+  - apt-get update -qq && apt-get install -y -qq fd-find
+  - mkdir -p ~/.local/bin
+  - export PATH=$PATH:~/.local/bin
+  - ln -s $(which fdfind) ~/.local/bin/fd
   - source `poetry env info --path`/bin/activate
 
 stages:
@@ -11,13 +15,12 @@ stages:
   #todo deploy package to pypi
 
 
-testing:
+pytest:
   stage: test
   script:
     - pytest --cov --cov-report term --cov-report xml:coverage.xml
   coverage: '/(?i)total.*? (100(?:\.0+)?\%|[1-9]?\d(?:\.\d+)?\%)$/'
   artifacts:
-    - echo "This is the test stage"
     - pytest --junitxml=report.xml
   artifacts:
     reports:
@@ -25,3 +28,17 @@ testing:
         coverage_format: cobertura
         path: coverage.xml
 
+repotracer:
+  stage: test
+  script:
+    - git fetch origin main
+    - echo $(which fd)
+    - echo $(which fdfind)
+    - fd --help
+    - echo "Running repotracer on itself"
+    - poetry run repotracer install-repos
+    - poetry run repotracer run
+  artifacts:
+   paths:
+      - .repotracer/stats/**/*.png
+      - .repotracer/stats/**/*.csv
