--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
   "python.formatting.provider": "none",
   "[python]": {
     "editor.defaultFormatter": "ms-python.black-formatter"
-  }
+  },
+  "files.autoSave": "off",
+  "editor.defaultFormatter": "ms-python.black-formatter",
+  "docker.languageserver.formatter.ignoreMultilineInstructions": true
 }
