Fix tokei when specific languages are passed in (v0.4.1)

--- a/.repotracer/config.json
+++ b/.repotracer/config.json
@@ -33,6 +33,14 @@
                         "languages": "all",
                     },
                 },
+                "count-python-loc": {
+                    "name": "count-python-loc",
+                    "description": "total loc in the repo (python only)",
+                    "type": "loc_count",
+                    "params": {
+                        "languages": "python",
+                    },
+                },
                 "test_script": {
                     "name": "test_script",
                     "description": "Number of characters in README.md",
