--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,3 +11,5 @@ git2 = "0.13.24"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rusqlite = "0.26.0"
+grep = "0.3.1"
+anyhow = "1.0.79"
