--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
   },
   "files.autoSave": "off",
   "editor.defaultFormatter": "ms-python.black-formatter",
-  "docker.languageserver.formatter.ignoreMultilineInstructions": true
+  "docker.languageserver.formatter.ignoreMultilineInstructions": true,
+  "rust-analyzer.linkedProjects": [
+    "./rust/Cargo.toml",
+  ]
 }
