Finally speed up measure_path only (stuff that doesn't need the contents) by changing measure_either into measure_tree.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,7 @@
   "docker.languageserver.formatter.ignoreMultilineInstructions": true,
   "rust-analyzer.linkedProjects": [
     "./rust/Cargo.toml",
+    "./rust/Cargo.toml",
+    "./rust/Cargo.toml"
   ]
 }
