--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -17,3 +17,6 @@ polars = "0.37.0"
 clap = "4.4.18"
 glob = "0.3.1"
 globset = "0.4.14"
+indicatif = {version = "0.17.7", features = ["rayon"]}
+chrono = "0.4.33"
+thread_local = "1.1.7"
