--- a/viewer/package.json
+++ b/viewer/package.json
@@ -13,14 +13,19 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.6.0",
+    "@radix-ui/themes": "^2.0.3",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.43.6",
     "@trpc/next": "^10.43.6",
     "@trpc/react-query": "^10.43.6",
     "@trpc/server": "^10.43.6",
+    "framer-motion": "^11.0.3",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "react": "18.2.0",
