--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -20,3 +20,4 @@ globset = "0.4.14"
 indicatif = {version = "0.17.7", features = ["rayon"]}
 chrono = "0.4.33"
 thread_local = "1.1.7"
+url = "2.5.0"
