--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -21,3 +21,4 @@ indicatif = {version = "0.17.7", features = ["rayon"]}
 chrono = "0.4.33"
 thread_local = "1.1.7"
 url = "2.5.0"
+gix = {version = "0.58.0", features=["revision", "parallel"]}
