--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -21,4 +21,5 @@ indicatif = {version = "0.17.7", features = ["rayon"]}
 chrono = "0.4.33"
 thread_local = "1.1.7"
 url = "2.5.0"
-gix = {version = "0.58.0", features=["revision", "parallel"]}
+gix = {version = "0.58.0", features=["revision", "parallel", "max-performance", "progress-tree"]}
+smallvec = "1.13.1"
