--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -7,7 +7,6 @@ edition = "2021"
 
 [dependencies]
 rayon = "1.5.1"
-git2 = "0.13.24"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 rusqlite = "0.26.0"
@@ -21,5 +20,6 @@ indicatif = {version = "0.17.7", features = ["rayon"]}
 chrono = "0.4.33"
 thread_local = "1.1.7"
 url = "2.5.0"
-gix = {version = "0.58.0", features=["revision", "parallel", "max-performance", "progress-tree"]}
+gix = {version = "0.58.0", features=["revision", "parallel", "max-performance", "progress-tree", "serde"]}
 smallvec = "1.13.1"
+tokei = "12.1.2"
