--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -23,3 +23,5 @@ url = "2.5.0"
 gix = {version = "0.58.0", features=["revision", "parallel", "max-performance", "progress-tree", "serde"]}
 smallvec = "1.13.1"
 tokei = "12.1.2"
+serde_with = "3.6.1"
+bincode = "1.3.3"
