--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -21,7 +21,7 @@ chrono = "0.4.33"
 thread_local = "1.1.7"
 url = "2.5.0"
 gix = {version = "0.58.0", features=["revision", "parallel", "max-performance", "progress-tree", "serde"]}
-smallvec = "1.13.1"
+smallvec = {version = "1.13.1", features=["serde", "union"]}
 tokei = "12.1.2"
 serde_with = "3.6.1"
 bincode = "1.3.3"
