--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -31,3 +31,5 @@ flate2 = { version = "1.0.28", features = ["rust_backend"] }
 gzp = "0.11.3"
 ahash = {version = "0.8.8", features = ["serde"]}
 dashmap = "5.5.3"
+strum = "0.26.1"
+strum_macros = "0.26.1"
