--- a/.repotracer/config.json
+++ b/.repotracer/config.json
@@ -1,55 +1,55 @@
 {
-    "stat_storage": {
-        "type": "csv",
-    },
-    "repos": {
-        "repotracer": {
-            "name": "repotracer",
-            "source": ".",
-            "default_branch": "main",
-            "stats": {
-                "num-files": {
-                    "name": "num-files",
-                    "description": "Total number of files in the repo",
-                    "type": "file_count",
-                    "params": {
-                        "pattern": "*",
-                    },
-                },
-                "num-todos": {
-                    "name": "num-todos",
-                    "description": "Number of occurences of 'todo' in the repo",
-                    "type": "regex_count",
-                    "params": {
-                        "pattern": "todo",
-                        "ripgrep_args": "-i",
-                    },
-                },
-                "count-loc": {
-                    "name": "count-loc",
-                    "description": "total loc in the repo",
-                    "type": "loc_count",
-                    "params": {
-                        "languages": "all",
-                    },
-                },
-                "count-python-loc": {
-                    "name": "count-python-loc",
-                    "description": "total loc in the repo (python only)",
-                    "type": "loc_count",
-                    "params": {
-                        "languages": "python",
-                    },
-                },
-                "test_script": {
-                    "name": "test_script",
-                    "description": "Number of characters in README.md",
-                    "type": "custom_script",
-                    "params": {
-                        "command": "cat README.md| wc -c | tr -d ' '",
-                    },
-                },
-            },
+  "stat_storage": {
+    "type": "csv"
+  },
+  "repos": {
+    "repotracer": {
+      "name": "repotracer",
+      "source": ".",
+      "default_branch": "main",
+      "stats": {
+        "num-files": {
+          "name": "num-files",
+          "description": "Total number of files in the repo",
+          "type": "file_count",
+          "params": {
+            "pattern": "*"
+          }
         },
-    },
+        "num-todos": {
+          "name": "num-todos",
+          "description": "Number of occurences of 'todo' in the repo",
+          "type": "regex_count",
+          "params": {
+            "pattern": "todo",
+            "ripgrep_args": "-i"
+          }
+        },
+        "count-loc": {
+          "name": "count-loc",
+          "description": "total loc in the repo",
+          "type": "loc_count",
+          "params": {
+            "languages": "all"
+          }
+        },
+        "count-python-loc": {
+          "name": "count-python-loc",
+          "description": "total loc in the repo (python only)",
+          "type": "loc_count",
+          "params": {
+            "languages": "python"
+          }
+        },
+        "test_script": {
+          "name": "test_script",
+          "description": "Number of characters in README.md",
+          "type": "custom_script",
+          "params": {
+            "command": "cat README.md| wc -c | tr -d ' '"
+          }
+        }
+      }
+    }
+  }
 }
