--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -26,4 +26,4 @@ smallvec = {version = "1.13.1", features=["serde", "union"]}
 indexmap = {version = "2.2.3", features=["serde"]}
 dashmap = "5.5.3"
 plotters = "0.3.5"
-polars = { version="0.37.0", features=["polars-io", "json", "csv", "rows", "temporal", "timezones"]}
+polars = { version="0.37.0", features=["polars-io", "json", "csv", "rows", "temporal", "timezones", "dtype-full", "zip_with", "lazy"]}
