--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -29,3 +29,4 @@ plotters = "0.3.5"
 polars = { version="0.37.0", features=["polars-io", "json", "csv", "rows", "temporal", "timezones", "dtype-full", "zip_with", "lazy"]}
 crossbeam = {version = "0.8.4", features=["crossbeam-channel"]}
 dialoguer = "0.11.0"
+comfy-table = "7.1.1"
