--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -26,7 +26,8 @@ smallvec = {version = "1.13.1", features=["serde", "union"]}
 indexmap = {version = "2.2.3", features=["serde"]}
 dashmap = "5.5.3"
 plotters = "0.3.5"
-polars = { version="0.37.0", features=["polars-io", "json", "csv", "rows", "temporal", "timezones", "dtype-full", "zip_with", "lazy"]}
 crossbeam = {version = "0.8.4", features=["crossbeam-channel"]}
 dialoguer = "0.11.0"
+tiny_http = "0.12.0"
 comfy-table = "7.1.1"
+csv = "1.3.0"
