--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -17,7 +17,7 @@ clap = "4.4.18"
 glob = "0.3.1"
 globset = "0.4.14"
 indicatif = {version = "0.17.7", features = ["rayon"]}
-chrono = "0.4.33"
+chrono = {version = "0.4.33", features = ["serde"]}
 url = "2.5.0"
 gix = {version = "0.58.0", features=["revision", "parallel", "max-performance", "progress-tree", "serde"]}
 tokei = "12.1.2"
