Finish refactor where we make the result of the measurement an Option

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -26,7 +26,7 @@ tokei = "12.1.2"
 ahash = {version = "0.8.8", features = ["serde"]}
 smallvec = {version = "1.13.1", features=["serde", "union"]}
 indexmap = {version = "2.2.3", features=["serde"]}
-dashmap = "5.5.3"
+dashmap = {version = "5.5.3", features=["inline"]}
 plotters = "0.3.5"
 crossbeam = {version = "0.8.4", features=["crossbeam-channel"]}
 dialoguer = "0.11.0"
