--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,10 +11,17 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    container:
+      image: debian:bookworm-slim
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      
+      - name: Install dependencies
+        run: |
+          apt-get update
+          apt-get install -y build-essential curl
       
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
