--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: |
           apt-get update
-          apt-get install -y build-essential curl
+          apt-get install -y build-essential curl cmake
       
       - name: Install Rust toolchain
         uses: dtolnay/rust-toolchain@stable
