Update version of tokei to get new file extensions and changes since 2021

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ indicatif = {version = "0.17.7", features = ["rayon"]}
 chrono = {version = "0.4.33", features = ["serde"]}
 url = "2.5.0"
 gix = {version = "0.58.0", features=["revision", "parallel", "max-performance", "progress-tree", "serde"]}
-tokei = "12.1.2"
+tokei = "13.0.0-alpha.8"
 ahash = {version = "0.8.8", features = ["serde"]}
 smallvec = {version = "1.13.1", features=["serde", "union"]}
 indexmap = {version = "2.2.3", features=["serde"]}
