--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,7 @@ dialoguer = "0.11.0"
 tiny_http = "0.12.0"
 comfy-table = "7.1.1"
 csv = "1.3.0"
+jaq-json = {version= "1.1.2", features=["serde_json"]}
+jaq-core = "2.2.0"
+jaq-std = "2.1.1"
+tempfile = "3.20.0"
