--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "repotracer"
-version = "0.6.2"
+version = "0.6.3"
 edition = "2021"
 description = "Collect stats about a repo over time."
 
@@ -16,6 +16,7 @@ bincode = "1.3.3"
 rayon = "1.5.1"
 thread_local = "1.1.7"
 grep = "0.3.1"
+regex = "1.10.3"
 anyhow = "1.0.79"
 clap = "4.4.18"
 glob = "0.3.1"
