--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,3 +39,4 @@ jaq-json = {version= "1.1.2", features=["serde_json"]}
 jaq-core = "2.2.0"
 jaq-std = "2.1.1"
 tempfile = "3.20.0"
+walkdir = "2.5.0"
